# delta-kernel-rs

ffi/examples/duckdb-delta-issue-303/: CMakeLists.txt  README.md  partition_pred_test.cpp
uc-client/: Cargo.toml
uc-client/src/: client.rs
